tests/baselines/reference/ambientExternalModuleWithRelativeModuleName.errors.txt
ambientExternalModuleWithRelativeModuleName.ts(1,16): error TS2436: Ambient module declaration cannot specify relative module name.
ambientExternalModuleWithRelativeModuleName.ts(5,16): error TS2436: Ambient module declaration cannot specify relative module name.


==== ambientExternalModuleWithRelativeModuleName.ts (2 errors) ====
    declare module "./relativeModule" {
                   ~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient module declaration cannot specify relative module name.
        var x: string;
    }
    
    declare module ".\\relativeModule" {
                   ~~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient module declaration cannot specify relative module name.
        var x: string;
    }